[tool.poetry]
name = "dsdeathcounter"
version = "0.1.0"
description = ""
authors = ["nanoastax <jakub.kramp@profil-software.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytesseract = "^0.3.10"
opencv-python = "4.7.0.68"
psutil = "^5.9.4"
mss = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
